tests/compile_time_tests/tag_attribute_argument_lhs_not_case.stderr
error: proc-macro derive panicked
 --> tests/compile_time_tests/tag_attribute_argument_lhs_not_case.rs:3:10
  |
3 | #[derive(TagName)]
  |          ^^^^^^^
  |
  = help: message: case value must be either "upper" or "lower"
